--- a/MyCity4Kids/MyCity4Kids/res/layout/confirm_otp_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/confirm_otp_activity.xml
@@ -55,11 +55,13 @@
         android:textColor="@color/white_color" />
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/resendOtpTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:padding="10dp"
-        android:text="resend_otp"
+        android:text="Resend OTP"
         android:textColor="?attr/colorPrimary" />
 </LinearLayout>
