--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_get_mobile_number.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_get_mobile_number.xml
@@ -15,6 +15,7 @@
         android:background="@null"
         android:drawableBottom="@drawable/underline"
         android:hint="Enter Mobile Number"
+        android:inputType="phone"
         android:padding="10dp"
         android:singleLine="true" />
 
