--- a/MyCity4Kids/MyCity4Kids/res/layout/invite_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/invite_item.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/inviteeImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_marginRight="10dp"
         android:src="@drawable/copy" />
 
