--- a/MyCity4Kids/MyCity4Kids/res/layout/invite_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/invite_layout.xml
@@ -4,6 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize" />
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
