--- a/MyCity4Kids/MyCity4Kids/res/layout/confirm_otp_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/confirm_otp_activity.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white_color">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -10,6 +11,41 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="20dp"
+        android:paddingLeft="25dp"
+        android:paddingRight="25dp"
+        android:background="@color/white_color">
+        <TextView
+            android:id="@+id/phnNoText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+
+            android:layout_marginTop="20dp"
+            android:text="Your Mobile No. :"
+            android:textColor="@color/new_grey"
+            android:textSize="20sp"
+            />
+
+        <TextView
+            android:id="@+id/textMobileNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_toRightOf="@+id/phnNoText"
+            android:gravity="center"
+            android:text="Mobile no:"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,14 +55,15 @@
         android:paddingBottom="10dp"
         android:paddingLeft="25dp"
         android:paddingRight="25dp"
-        android:paddingTop="25dp">
+        android:id="@+id/verifyOTPLayout"
+       >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
             android:paddingBottom="7dp"
-            android:text="VERIFY CODE"
+            android:text="VERIFY OTP"
             android:textColor="@color/new_grey" />
 
         <EditText
@@ -64,4 +101,59 @@
         android:padding="10dp"
         android:text="Resend OTP"
         android:textColor="?attr/colorPrimary" />
+    <RelativeLayout
+        android:id="@+id/layoutSendingOtp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="55dp"
+        android:background="?attr/colorPrimary"
+        android:visibility="gone"
+
+        >
+
+
+        <TextView
+            android:id="@+id/textViewSendingOtp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:text="Sending OTP/Code via SMS"
+            android:textColor="#ffffff"
+            android:textSize="25sp"
+            />
+
+        <TextView
+            android:id="@+id/textViewWaitLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textViewSendingOtp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:textColor="#000000"
+            android:textSize="18sp" />
+
+
+        <TextView
+            android:id="@+id/textViewTimer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/textViewWaitLabel"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="10dp"
+            android:text="00.00"
+            android:textColor="#ffffff"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+
+    </RelativeLayout>
 </LinearLayout>
