--- a/MyCity4Kids/MyCity4Kids/res/layout/create_family_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/create_family_activity.xml
@@ -146,9 +146,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@color/black_color" />
 
-
             <LinearLayout
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white_color"
@@ -156,22 +154,64 @@
                 android:padding="25dp">
 
                 <RelativeLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@+id/color_spouse"
+                    android:orientation="horizontal">
 
-                    <EditText
-                        android:id="@+id/kids_name"
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_toLeftOf="@+id/kidcolor"
-                        android:background="@null"
-                        android:drawableBottom="@drawable/underline"
-                        android:drawablePadding="20dp"
-                        android:hint="@string/kids_name"
-                        android:padding="7dp"
                         android:paddingBottom="7dp"
+                        android:text="CHILD INFORMATION"
                         android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:textColor="@color/black_color" />
+                        android:textColor="@color/black_color"
+                        android:textStyle="bold" />
+
+
+                    <TextView
+                        android:id="@+id/cross"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:background="@drawable/cross_xxhdpi" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp">
+
+                    <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/kidcolor"
+                        android:background="@color/white_color"
+                        android:orientation="vertical">
+
+
+                        <TextView
+                            android:id="@+id/txtkidname"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="sans-serif-light"
+                            android:paddingBottom="7dp"
+                            android:text="CHILD'S NAME"
+                            android:textColor="@color/new_grey" />
+
+                        <EditText
+                            android:id="@+id/kids_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:background="@null"
+                            android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                            android:drawableBottom="@drawable/underline"
+                            android:inputType="textCapWords"
+                            android:paddingBottom="7dp"
+                            android:textColor="@color/black_color" />
+
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/kidcolor"
@@ -186,6 +226,14 @@
 
                 </RelativeLayout>
 
+                <TextView
+                    android:id="@+id/txtkidbdy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="sans-serif-light"
+                    android:paddingBottom="7dp"
+                    android:text="BIRTHDAY"
+                    android:textColor="@color/new_grey" />
 
                 <TextView
                     android:id="@+id/kids_bdy"
@@ -194,14 +242,13 @@
                     android:layout_weight="2"
                     android:background="@null"
                     android:drawableBottom="@drawable/underline"
-                    android:drawablePadding="20dp"
+                    android:drawablePadding="3dp"
                     android:drawableRight="@drawable/drop_down_arrowxxhdpi"
                     android:gravity="left"
-                    android:hint="@string/kids_bday"
                     android:padding="5dp"
                     android:paddingBottom="7dp"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
                     android:textColor="@color/black_color" />
+
 
             </LinearLayout>
 
