apptracker and resend OTP limit

--- a/MyCity4Kids/MyCity4Kids/res/xml/app_tracker.xml
+++ b/MyCity4Kids/MyCity4Kids/res/xml/app_tracker.xml
@@ -43,5 +43,39 @@
 <screenName name="com.mycity4kids.ui.activity.DashboardActivity">DashBoard</screenName>
     <screenName name="com.mycity4kids.ui.fragment.FragmentSetting">Settings</screenName>
     <screenName name="com.mycity4kids.ui.fragment.FragmentFamilyDetail">Family</screenName>
+    <screenName name="com.mycity4kids.ui.activity.SplashActivity">Splash Screen</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ActivityLogin">Login Screen</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ArticleFilterDialogActivity">Blogs filter dialogue screen</screenName>
+    <screenName name="com.mycity4kids.ui.activity.BlogFilterActivity">Blogger Filter Dialogue</screenName>
+    <screenName name="com.mycity4kids.ui.activity.BlogDetailActivity">Blogger Description screen</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ActivityCreateTask">Create task</screenName>
+    <screenName name="com.mycity4kids.ui.activity.MissingPlaceActivity">Add Missing Place</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ActivityShowTask">Task Detail</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ActivityEditTask">Edit task</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ActivityShowAppointment">Appointment Details</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ActivityCreateAppointment">Create Appointment</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ActivityEditAppointment">Edit Appointment</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ForgotPasswordActivity">Forgot Password</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ActivitySignUp">Sign up</screenName>
+    <screenName name="com.mycity4kids.ui.activity.BusinessListActivityKidsResources">Resources List</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ProfileActivity">Edit Profile</screenName>
+    <screenName name="com.mycity4kids.ui.activity.WriteReviewActivity">Write Review</screenName>
+    <screenName name="com.mycity4kids.ui.activity.BusinessDetailsActivity">Resource/Event Details Screen</screenName>
+    <screenName name="com.mycity4kids.ui.activity.BookOrPayWebActivity">Booking Payment Webpage</screenName>
+    <screenName name="com.mycity4kids.ui.activity.AutoSuggestTransparentDialogActivity">Resource Search</screenName>
+    <screenName name="com.mycity4kids.ui.activity.LandingLoginActivity">Login Registration Dashboard</screenName>
+    <screenName name="com.mycity4kids.ui.activity.YouTubeVideoActivity">Youtube Video</screenName>
+    <screenName name="com.mycity4kids.ui.activity.KidsBirthdayActivity">Kid's Birthday</screenName>
+    <screenName name="com.mycity4kids.ui.activity.PlanYourWeekActivity">Plan Your Week</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ArticleBlogSearchDialogActivity">Blog Search</screenName>
+    <screenName name="com.mycity4kids.ui.activity.AddCommentReplyActivity">Comment Reply</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ActivityFamilyProfile">Family Profile</screenName>
+    <screenName name="com.mycity4kids.ui.activity.JoinFamilyActivity">Join Family Dashboard</screenName>
+    <screenName name="com.mycity4kids.ui.activity.LoadWebViewActivity">Help</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ListFamilyInvitesActivity">List of Family Invites</screenName>
+    <screenName name="com.mycity4kids.ui.activity.SocialSignUpActivity">Social Media Signup</screenName>
+    <screenName name="com.mycity4kids.ui.activity.CreateFamilyActivity">Create Family</screenName>
+    <screenName name="com.mycity4kids.ui.activity.ActivityVerifyOTP">OTP Verification</screenName>
+    <screenName name="com.mycity4kids.ui.activity.UpdateMobileNumberActivity">Update Mobile No</screenName>
 
 </resources>
