--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_loginform.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_loginform.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
-            android:text="EMAIL"
+            android:text="EMAIL OR MOBILE"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <EditText
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
-            android:text="FAMILY PASSWORD"
+            android:text="PASSWORD"
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <EditText
@@ -108,5 +108,30 @@
         android:layout_marginRight="5dp"
         android:src="@drawable/google_button_xxhdpi" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:text="NEW USER?"
+            android:textColor="@color/new_grey" />
+
+        <TextView
+            android:id="@+id/signUpTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="5dp"
+            android:paddingTop="10dp"
+            android:text="@string/sign_up"
+            android:textColor="@color/new_grey" />
+    </LinearLayout>
 </LinearLayout>
