--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_setting.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_setting.xml
@@ -33,19 +33,19 @@
         android:textColor="@color/new_grey"
         android:textSize="15dp" />
 
-    <TextView
-        android:id="@+id/notification"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp"
-        android:background="@color/white_color"
-        android:drawablePadding="50dp"
-        android:drawableRight="@drawable/arrow_xxhdpi"
-        android:gravity="center_vertical"
-        android:padding="15dp"
-        android:text="Notifications"
-        android:textColor="@color/new_grey"
-        android:textSize="15dp" />
+    <!--<TextView-->
+        <!--android:id="@+id/notification"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="1dp"-->
+        <!--android:background="@color/white_color"-->
+        <!--android:drawablePadding="50dp"-->
+        <!--android:drawableRight="@drawable/arrow_xxhdpi"-->
+        <!--android:gravity="center_vertical"-->
+        <!--android:padding="15dp"-->
+        <!--android:text="Notifications"-->
+        <!--android:textColor="@color/new_grey"-->
+        <!--android:textSize="15dp" />-->
 
     <TextView
         android:id="@+id/external_cal"
