--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_tutorial.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_tutorial.xml
@@ -66,7 +66,7 @@
                 android:layout_height="10dp"
                 android:src="@drawable/white_filled_bg" />
 
-            <ImageView
+            <!--<ImageView
                 android:id="@+id/six"
                 android:layout_width="10dp"
                 android:tag="6"
@@ -74,7 +74,7 @@
                 android:layout_height="10dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:src="@drawable/white_filled_bg" />
+                android:src="@drawable/white_filled_bg" />-->
         </LinearLayout>
 
         <TextView
