--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_adult_profile.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_adult_profile.xml
@@ -26,13 +26,14 @@
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <EditText
-                android:inputType="textCapSentences"
                 android:id="@+id/adult_name"
                 android:layout_width="wrap_content"
-                android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                 android:layout_height="match_parent"
                 android:background="@null"
+                android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                 android:drawableBottom="@drawable/underline"
+                android:enabled="false"
+                android:inputType="textCapSentences"
                 android:paddingBottom="7dp"
                 android:textColor="@color/black_color" />
 
@@ -47,6 +48,7 @@
             android:layout_alignParentRight="true"
             android:drawableBottom="@drawable/color_2xxhdpi"
             android:drawablePadding="2dp"
+            android:enabled="false"
             android:hint="@string/colour"
             android:textColor="@color/black_color" />
 
@@ -67,10 +69,11 @@
         android:layout_height="wrap_content"
         android:layout_weight="2"
         android:background="@null"
-        android:inputType="textEmailAddress"
         android:drawableBottom="@drawable/underline"
         android:drawablePadding="3dp"
+        android:enabled="false"
         android:gravity="left"
+        android:inputType="textEmailAddress"
         android:padding="5dp"
         android:textColor="@color/black_color" />
 
