--- a/MyCity4Kids/MyCity4Kids/res/layout/aa_suggested_task_cal_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/aa_suggested_task_cal_fragment.xml
@@ -39,10 +39,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/toolbar"
-            android:gravity="center"
-            android:paddingTop="5dp"
-            android:text="Your calendar and ToDo's are empty but your week can't be.\n So get it off your head and into the Family Orgamizer"
-            android:textSize="18sp" />
+            android:gravity="center_vertical"
+            android:padding="10dp"
+            android:text="Your Calendar and To-do's are empty but your week can't be. So get it off your head and into the Family Organizer."
+            android:textSize="16sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
