--- a/MyCity4Kids/MyCity4Kids/res/values/attrs.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/attrs.xml
@@ -9,4 +9,7 @@
         <attr name="android:fadingEdgeLength" />
     </declare-styleable>
 
+    <declare-styleable name="CustomFontTextView">
+        <attr name="fontName" format="string" />
+    </declare-styleable>
 </resources>
