--- a/MyCity4Kids/MyCity4Kids/res/drawable/signin_button_bg_disabled.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/signin_button_bg_disabled.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/login_grey" />
+        android:color="@color/login_line_grey" />
 
     <solid android:color="#ffffff" />
 
