--- a/MyCity4Kids/MyCity4Kids/res/layout/list_item_articles.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/list_item_articles.xml
@@ -77,13 +77,13 @@
                     android:orientation="horizontal"
                     android:paddingLeft="10dp">
 
-                    <ImageView
-                        android:id="@+id/author_pic"
-                        android:layout_width="13dp"
-                        android:layout_height="13dp"
-                        android:layout_gravity="bottom"
-                        android:gravity="bottom"
-                        android:background="@color/hint_txt_color" />
+                    <!--<ImageView-->
+                        <!--android:id="@+id/author_pic"-->
+                        <!--android:layout_width="13dp"-->
+                        <!--android:layout_height="13dp"-->
+                        <!--android:layout_gravity="bottom"-->
+                        <!--android:gravity="bottom"-->
+                        <!--android:background="@color/hint_txt_color" />-->
 
                     <TextView
                         android:id="@+id/txvAuthorName"
