--- a/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/included_drawer_view.xml
@@ -209,7 +209,8 @@
             android:paddingTop="5dp"
             android:text="ADD A BLOG"
             android:textColor="@color/white_color"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:drawableLeft="@drawable/icon_add_blog"/>
 
         <TextView
             android:id="@+id/drafts"
@@ -223,14 +224,17 @@
             android:text="DRAFTS"
             android:textColor="@color/white_color"
             android:textSize="12sp"
-            android:layout_marginTop="26dp"/>
+            android:layout_marginTop="21dp"
+            android:drawableLeft="@drawable/icon_drafts"
+
+            />
 
         <TextView
             android:id="@+id/txvSettings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="26dp"
-
+            android:layout_marginTop="21dp"
+            android:drawableLeft="@drawable/settings_new"
             android:drawablePadding="10dp"
             android:paddingBottom="5dp"
             android:paddingLeft="12dp"
@@ -243,14 +247,16 @@
             android:id="@+id/feed_back"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="21dp"
             android:drawablePadding="10dp"
             android:paddingBottom="5dp"
             android:paddingLeft="12dp"
             android:paddingTop="5dp"
             android:text="SEND FEEDBACK"
             android:textColor="@color/white_color"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:drawableLeft="@drawable/feedback_xxhdpi"
+            />
 
       <!--  <TextView
             android:id="@+id/txvtelfrnd"
